--- a/assets/index.html
+++ b/assets/index.html
@@ -46,23 +46,11 @@
                         <button id="submit" class="btn btn-primary">Submit</button>
                     </div>
                 </div>
-            </div>            
-
-            <!-- <div class="row">
-                <form action="">
-                    <div class="col-6">
-                        <input type="text" class="form-control" id="inputName">
-                    </div>
-                    <div class="col-6">
-                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                            <label class="form-check-label" for="inlineRadio1">1</label>
-                    </div>
-                </form>
-            </div> -->
-
+            </div>
         </div>
     </body>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/bowser@2.7.0/es5.js"></script>
+    <script type='text/javascript' src='config.js'></script>
     <script src="/index.js"></script>
 </html>
